[package]
name = "blindkopie"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
async-tungstenite = { version = "0.13", features = ["tokio-rustls"] }
base64 = "0.13"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "std"] }
clap = "2"
common-multipart-rfc7578 = "0.3"
ct-logs = "0.8"
ctrlc = { version = "3", features = ["termination"] }
futures = "0.3"
futures-util = { version = "0.3", features = ["alloc", "io", "sink"] }
getrandom = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "runtime", "stream", "tcp"] }
hyper-multipart-rfc7578 = "0.5"
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
hyper-trust-dns-connector = "0.3"
log = "0.4"
memfd = "0.4"
memmap = "0.7"
mime = "0.3"
nix = "0.21"
parking_lot = "0.11"
percent-encoding = "2"
pretty_env_logger = "0.4"
ron = "0.6"
rustls = "0.19"
rustyline = "8"
scopeguard = "1"
serde_json = "1"
serde_qs = "0.8"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.4"
thiserror = "1"
tinystr = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "macros", "net", "parking_lot", "process", "rt", "rt-multi-thread", "time"] }
tokio-codec = "0.1"
tokio-rustls = "0.22"
tokio-util = { version = "0.6", features = ["codec", "io"] }
trust-dns-resolver = { version = "0.20", default-features = false, features = ["tokio-runtime", "dns-over-https-rustls"] }
url = "2"
webpki-roots = "0.21"
tokio-tungstenite = { version = "0.14", features = ["rustls-tls"] }
